# pythonit-toolkit

./: .gitignore  LICENSE  pyproject.toml
.github/workflows/: commands.yml  deploy-toolkit.yml  tests.yml
pythonit_toolkit/emails/: templates.py  utils.py
pythonit_toolkit/emails/backends/: base.py  local.py  ses.py
pythonit_toolkit/pastaporto/: entities.py  test.py  tokens.py
pythonit_toolkit/service_client/: client.py
tests/emails/: test_utils.py
tests/emails/backends/: test_local.py  test_ses.py
tests/pastaporto/: test_tokens.py
